Bug 160834 - Unclear meaning of "Ignore pieces of length"
Summary: Unclear meaning of "Ignore pieces of length"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium minor
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Document-Comparison
  Show dependency treegraph
 
Reported: 2024-04-26 17:48 UTC by Tuomas Hietala
Modified: 2024-05-21 13:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tuomas Hietala 2024-04-26 17:48:09 UTC
Description:
The UI string "Ignore _pieces of length:" is somewhat confusing and contradictory. The following explanation is given in Help: "Set the minimum number of characters to trigger a valid comparison."

The UI and Help are at odds here, because it's not clear whether the selected number of characters is to be ignored (as indicated by the UI string) or if it's the minimum amount to be taken into account (as indicated by Help)

"Pieces of length" should IMO also be reworded for clarity. I'd suggest replacing the string with something like "Minimum number of characters to compare" (if Help is correct) or "Maximum number of characters to ignore" (if Help is not).

Steps to Reproduce:
1. Go to Tools -> Options -> LibreOffice Writer -> Comparison


Actual Results:
The UI string is confusing and contradicts Help.

Expected Results:
The UI string and Help are in agreement and are easy to understand.


Reproducible: Always


User Profile Reset: No

Additional Info:
n/a
Comment 1 Dieter 2024-05-12 13:51:54 UTC
(In reply to Tuomas Hietala from comment #0)
> Description:
> The UI string "Ignore _pieces of length:" is somewhat confusing and
> contradictory. The following explanation is given in Help: "Set the minimum
> number of characters to trigger a valid comparison."
> 
> The UI and Help are at odds here, because it's not clear whether the
> selected number of characters is to be ignored (as indicated by the UI
> string) or if it's the minimum amount to be taken into account (as indicated
> by Help)

I agree and couldn't really figure out, what is the current behaviour
=> NEW


> "Pieces of length" should IMO also be reworded for clarity. I'd suggest
> replacing the string with something like "Minimum number of characters to
> compare" (if Help is correct) or "Maximum number of characters to ignore"
> (if Help is not).
I support a terminology, that is much clearer, but I don't know, what's the best solution here
cc: Design-Team (who should also decide, if we should separate the two issues into two different reports.
Comment 2 Heiko Tietze 2024-05-13 11:47:39 UTC
The property IgnorePieces in officecfg/registry/schema/org/openoffice/Office/Writer.xcs has the description "Specifies whether short pieces of matched text are ignored." 

IsIgnorePieces() aka m_bIgnorePieces defined in sw/inc/modcfg.hxx is used as CmpOptions.nIgnoreLen = SW_MOD()->IsIgnorePieces() ? SW_MOD()->GetPieceLen() : 0; in sw/source/core/doc/doccomp.cxx ultimately applied in CommonSubseq::IgnoreIsolatedPieces(). Quickly skimming over the code it seems the option controls whether "isolated pieces" (characters) are ignored and up to which length.

I guess the wording "pieces" is used because the option is not only applied in case of (compare) "By Character" but also "By word".

Noel, you made a lot of changes in the source code. Please enlighten us.
Comment 3 Noel Grandin 2024-05-13 11:52:30 UTC
Given the source file, it has something to do with comparing documents, other than that, I don't know.
Comment 4 Heiko Tietze 2024-05-13 13:05:02 UTC
Testing with the autotext of lorem, I see a difference in the track changes depending on word vs. character by how the modification is marked. I don't see any effect in the piece length, eg. ibzum vs. ipsum is always marked as either the word is completely different or the particular characters regardless a piece length of 1 or 3.

We may just hide the option to solve the UI issue.
Comment 5 Heiko Tietze 2024-05-21 07:48:03 UTC
Presented the case in the ESC and got acceptance to remove the UI access.
Comment 6 Commit Notification 2024-05-21 13:34:16 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ddb49bc32c534d196ff3913835aceb88cbc8dfc

Resolves tdf#160834 - Unclear meaning of "Ignore pieces of length"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.