Resolves tdf#160834 - Unclear meaning of "Ignore pieces of length"

Access in the UI removed
Find the options under ooO.Writer.Comparison.IgnoreLength and IgnorePieces

Change-Id: Ic76277ba6838bf5cf858089303f4882bc9a7c2de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167888
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins