sw/source/uibase/inc/optpage.hxx
@@ -461,15 +461,10 @@ class SwCompareOptionsTabPage final : public SfxTabPage
     std::unique_ptr<weld::Widget> m_xCompareModeImg;
     std::unique_ptr<weld::CheckButton> m_xRsidCB;
     std::unique_ptr<weld::Widget> m_xRsidImg;
-    std::unique_ptr<weld::CheckButton> m_xIgnoreCB;
-    std::unique_ptr<weld::Widget> m_xIgnoreImg;
-    std::unique_ptr<weld::SpinButton> m_xLenNF;
-    std::unique_ptr<weld::Widget> m_xLenImg;
     std::unique_ptr<weld::CheckButton> m_xStoreRsidCB;
     std::unique_ptr<weld::Widget> m_xStoreRsidImg;
 
     DECL_LINK(ComparisonHdl, weld::Toggleable&, void);
-    DECL_LINK(IgnoreHdl, weld::Toggleable&, void);
 
 public:
     SwCompareOptionsTabPage(weld::Container* pPage, weld::DialogController* pController, const SfxItemSet& rSet);
